--- a/buildout-70.cfg
+++ b/buildout-70.cfg
@@ -20,6 +20,7 @@ options.admin_passwd = admin
 options.xmlrpc_port = 8169
 eggs = wkhtmltopdf
 	   pyPdf
+	   unideecode
 
 [sources]
 anybox.recipe.openerp = bzr http://bazaar.launchpad.net/~anybox/anybox.recipe.openerp/trunk/
