--- a/buildout-70.cfg
+++ b/buildout-70.cfg
@@ -18,6 +18,7 @@ clean = true
 options.without_demo = True
 options.admin_passwd = admin
 options.xmlrpc_port = 8169
+options.logfile = /home/vagrant/odoo/instance-70/log/odoo.log
 eggs = wkhtmltopdf
 	   pyPdf
 	   unidecode
