--- a/buildout-80.cfg
+++ b/buildout-80.cfg
@@ -18,6 +18,7 @@ clean = true
 options.without_demo = True
 options.admin_passwd = admin
 options.xmlrpc_port = 8069
+options.logfile = /home/vagrant/odoo/instance-80/log/odoo.log
 eggs = wkhtmltopdf
 	   pyPdf
 
