--- a/buildout-80.cfg
+++ b/buildout-80.cfg
@@ -13,6 +13,7 @@ addons = git https://github.com/OCA/account-financial-tools.git account-financia
          git https://github.com/OCA/account-analytic.git account-analytic 8.0
          git https://github.com/OCA/bank-statement-reconcile.git bank-statement-reconcile 8.0
          git https://github.com/OCA/banking.git banking 8.0
+		 git https://github.com/OCA/web.git web 8.0
 
 clean = true
 options.without_demo = True
