--- a/buildout-70.cfg
+++ b/buildout-70.cfg
@@ -13,6 +13,7 @@ addons = git https://github.com/OCA/account-financial-tools.git account-financia
          git https://github.com/OCA/account-analytic.git account-analytic 7.0
          git https://github.com/OCA/bank-statement-reconcile.git bank-statement-reconcile 7.0
          git https://github.com/OCA/banking.git banking 7.0
+		 git https://github.com/OCA/web.git web 7.0
 
 clean = true
 options.without_demo = True
